--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 </head>
 <body>
     <h1>Comprobador de Palíndromo</h1>
-    <p>Verificar la función en la consola</p>
-<p>Llamar la función palindrome ();</p>
-<p>Poner entre comillas la palabra, por ejemplo: alindrome("eye"), el resultado debe true</p>
-    
+    <h2>Verificar la función palindrome (); en la consola, luego llamarla, por ejemplo: palindrome("eye"), el resultado debe devolver true</h2>
 </body>
 <script type="text/javascript" src="js/main.js"></script>
 </html>
