Se unifica en una sola pagina

--- a/index.html
+++ b/index.html
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Palíndromo</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Ejercicios FCC</title>
 </head>
+
 <body>
-    <h1>Comprobador de Palíndromo</h1>
-    <h2>Verificar la función palindrome (); en la consola, luego llamarla, por ejemplo: palindrome("eye"), el resultado debe devolver true</h2>
+
+    <h1>Ejercicios javascript FCC</h1>
+    <hr/>
+
+    <!-- Reto Uno -->
+    <h2>1) Comprobador de Palíndromo</h2>
+    <h2>Verificar la función convertToRoman(); en la consola y llamarla, poner cualquier palabra, por
+        ejemplo: Race Car, el resultado debe ser true</h2><br/> 
+
+    <!-- Reto Dos -->
+    <h2>2) Convertidor de Números Romanos</h2>
+    <h2>Verificar la función convertToRoman(); en la consola y llamarla, poner cualquier número, por
+        ejemplo: convertToRoman(10), el resultado debe ser (X).</h2><br/>       
+
+     <!-- Reto Tres -->
+     <h2>3) Cifrado Cesar</h1>
+     <h2>Verificar en la consola y poner por ejemplo console.log(rot13("SERR PBQR PNZC")); el resultado debería ser "FREE
+     CODE CAMP"</h2><br/>     
+
+    <!-- Reto Cuatro -->
+    <h2>4) Validador de números de teléfono</h2>
+    <h2>Verificar la función en la consola, por ejemplo: console.log(telephoneCheck("555-555-5555")); y se puede notar que devuelve un true</h2><br/> 
+       
+    <!-- Reto Cinco -->  
+    <h2>5) Caja Registradora</h2>  
+    <h2>Revisar el resultado en consola</h2><br/>     
+    
+
+    <script type="text/javascript" src="js/mainUno.js"></script>
+    <script type="text/javascript" src="js/mainDos.js"></script>
+    <script type="text/javascript" src="js/mainTres.js"></script>
+    <script type="text/javascript" src="js/mainCuatro.js"></script>
+    <script type="text/javascript" src="js/mainCinco.js"></script>
 </body>
-<script type="text/javascript" src="js/main.js"></script>
+
+
 </html>
